# tdd_gtest_projects

./: CMakeLists.txt
src/: xxx.cpp  xxx.h
unittest/: Testxxx.cpp
